# podcast-marketing-saas-it6tbi

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: backend-ci.yml  deploy-production.yml  deploy-staging.yml  frontend-ci.yml
documentation/: Product Requirements Document (PRD).md  Project Guide.md  Technical Specifications.md
infrastructure/docker/nginx/: Dockerfile  nginx.conf
infrastructure/docker/redis/: Dockerfile  redis.conf
infrastructure/kubernetes/: backend-deployment.yaml  backend-hpa.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-hpa.yaml  frontend-service.yaml  ingress.yaml  nginx-deployment.yaml  nginx-service.yaml  persistent-volume.yaml  redis-deployment.yaml  redis-service.yaml  secrets.yaml  storage-class.yaml
infrastructure/monitoring/elk/: elasticsearch.yml  kibana.yml  logstash.conf
infrastructure/monitoring/grafana/: datasources.yml
infrastructure/monitoring/grafana/dashboards/: backend.json  frontend.json  infrastructure.json
infrastructure/monitoring/prometheus/: prometheus.yml
infrastructure/terraform/: backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
infrastructure/terraform/environments/production/: main.tf  terraform.tfvars  variables.tf
infrastructure/terraform/environments/staging/: main.tf  terraform.tfvars  variables.tf
infrastructure/terraform/modules/ecs/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/networking/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/redis/: main.tf  outputs.tf  variables.tf
infrastructure/terraform/modules/s3/: main.tf  outputs.tf  variables.tf
src/backend/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
src/backend/ai_service/: __init__.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/backend/ai_service/processors/: __init__.py  content_generator.py  gpt.py  whisper.py
src/backend/ai_service/tests/: __init__.py  test_models.py  test_services.py  test_views.py
src/backend/analytics_service/: __init__.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/backend/analytics_service/metrics/: __init__.py  engagement.py  performance.py
src/backend/analytics_service/tests/: __init__.py  test_models.py  test_services.py  test_views.py
src/backend/api/: __init__.py  docs.py  schema.py  throttling.py  urls.py  versioning.py
src/backend/api/tests/: __init__.py  test_schema.py
src/backend/auth_service/: __init__.py  apps.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
src/backend/auth_service/tests/: __init__.py  test_models.py  test_services.py  test_views.py
src/backend/common/: __init__.py  cache.py  constants.py  exceptions.py  logging.py  pagination.py  utils.py  validators.py
src/backend/common/tests/: __init__.py  test_utils.py
src/backend/core/: __init__.py  asgi.py  celery.py  urls.py
src/backend/core/middleware/: __init__.py  cors.py  logging.py  security.py
src/backend/core/settings/: __init__.py  base.py  development.py  production.py  test.py
src/backend/marketing_service/: __init__.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/backend/marketing_service/social_platforms/: __init__.py  facebook.py  instagram.py  linkedin.py  twitter.py
src/backend/marketing_service/tests/: __init__.py  test_models.py  test_services.py
src/backend/migrations/: 0001_initial.py  __init__.py
src/backend/podcast_service/: __init__.py  apps.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/backend/podcast_service/tests/: __init__.py  test_models.py  test_services.py  test_views.py
src/backend/podcast_service/utils/: audio_processor.py  metadata_extractor.py
src/backend/scripts/: migrate.sh  run-tests.sh  start-dev.sh  start-prod.sh
src/backend/storage_service/: __init__.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
src/backend/storage_service/providers/: __init__.py  cloudfront.py  s3.py
src/backend/storage_service/tests/: __init__.py  test_models.py  test_services.py  test_views.py
src/web/: .dockerignore  .env.example  .eslintrc.json  .gitignore  .prettierrc  Dockerfile  README.md  docker-compose.yml  index.html  jest.config.ts  jest.setup.ts  next-env.d.ts  next.config.js  package.json  postcss.config.js  tailwind.config.ts
src/web/__tests__/hooks/: use-auth.test.ts
src/web/__tests__/lib/: utils.test.ts
src/web/__tests__/store/: auth-slice.test.ts
src/web/public/: manifest.json  robots.txt
src/web/src/: middleware.ts
src/web/src/app/: error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
src/web/src/lib/: api.ts  (+5 more)
(+92 files in other folders)
