[metadata]
# Requirements Addressed: Backend Dependency Management
# Location: Technical Specification/9. TECHNOLOGY STACK/9.2 FRAMEWORKS & LIBRARIES
name = podcast-marketing-backend
version = 1.0.0
description = Backend services for the Podcast Marketing Automation SaaS platform.
author = Development Team
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Framework :: Django :: 4.2
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
python_requires = >=3.11
packages = find:
package_dir =
    = src

# Requirements Addressed: Backend Dependency Management
# Location: Technical Specification/9. TECHNOLOGY STACK/9.2 FRAMEWORKS & LIBRARIES
install_requires =
    Django>=4.2
    djangorestframework>=3.14
    celery>=5.3
    redis>=4.5
    psycopg2>=2.9
    timescale>=2.11
    openai>=0.27
    boto3>=1.26
    pandas>=2.0

# Test dependencies
tests_require =
    pytest>=7.4.0
    pytest-django>=4.5.2
    pytest-cov>=4.1.0

[options.packages.find]
where = src
exclude =
    tests*
    docs*

# Requirements Addressed: Testing Framework Configuration
# Location: Technical Specification/System Architecture/Backend Services
[tool:pytest]
addopts = --cov=src/backend --cov-report=html --cov-report=term
testpaths = src/backend
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
DJANGO_SETTINGS_MODULE = core.settings.test

# Requirements Addressed: Static Type Checking
# Location: 7.3 Technical Decisions/Architecture Patterns
[mypy]
python_version = 3.11
strict = True
ignore_missing_imports = True
disallow_untyped_calls = True
disallow_untyped_defs = True
warn_unused_ignores = True
check_untyped_defs = True
disallow_incomplete_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_configs = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_any_unimported = True

[mypy.plugins.django-stubs.*]
django_settings_module = "src.backend.core.settings.base"

# Requirements Addressed: Code Quality and Consistency
# Location: 7.3 Technical Decisions/Architecture Patterns
[flake8]
max-line-length = 88
exclude = 
    .git,
    __pycache__,
    migrations,
    venv,
    node_modules
ignore = E203,W503
max-complexity = 10
show-source = true
statistics = true
format = %(path)s:%(row)d:%(col)d: %(code)s %(text)s
indent-size = 4
docstring-convention = google

[coverage:run]
source = src/backend
omit =
    */tests/*
    */migrations/*
    */settings/*
    */wsgi.py
    */asgi.py
    manage.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError
show_missing = True
fail_under = 80